--- a/src/app/pages/brote/brote.page.html
+++ b/src/app/pages/brote/brote.page.html
@@ -114,7 +114,7 @@
               <th class="fecha-tittle">{{fechas[7]}}</th>
               <th class="fecha-tittle">{{fechas[8]}}</th>
             </tr>
-            <tr *ngFor="let item of gradosName; let i=index">
+            <tr *ngFor="let item of gradosCloud; let i=index">
               <td >{{item}}</td>
               <td>{{Ccolumna1[i]}}</td>
               <td>{{Ccolumna2[i]}}</td>
