New changes search by day, search by variety

--- a/src/app/pages/brote/brote.page.html
+++ b/src/app/pages/brote/brote.page.html
@@ -12,7 +12,7 @@
           <ion-label color="dark" ><strong>SALA DE BROTE</strong></ion-label>
         </ion-segment-button >
         <ion-segment-button  (click)="indicadoresSemanales()">
-          <ion-label color="dark" ><strong>INDICADORES SEMANALES</strong></ion-label>
+          <ion-label color="dark" ><strong>Sala de brote por día</strong></ion-label>
         </ion-segment-button >
 
       </ion-segment>
