--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
       </ion-segment-button >
 
       <ion-segment-button  (click)="indicadoresSemanal()">
-        <ion-label  color="dark"><strong>Indicadores Semanales</strong></ion-label>
+        <ion-label  color="dark"><strong>Sala de brote por día</strong></ion-label>
       </ion-segment-button >
 
     </ion-segment>
