--- a/src/app/pages/i-semanales/i-semanales.page.html
+++ b/src/app/pages/i-semanales/i-semanales.page.html
@@ -10,7 +10,7 @@
       </ion-segment-button >
 
       <ion-segment-button  (click)="reloadPage()">
-        <ion-label color="dark" ><strong>INDICADORES SEMANALES</strong></ion-label>
+        <ion-label color="dark" ><strong>Sala de brote por día</strong></ion-label>
       </ion-segment-button >
 
     </ion-segment>
@@ -18,15 +18,151 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div class="div1">
-    <ion-button id="hover-trigger" class="fecha">Fecha</ion-button>
-    <ion-popover trigger="hover-trigger" triggerAction="hover">
-      <ng-template>
-        <ion-content>
-          <ion-datetime presentation="date" [multiple]="true" ></ion-datetime>
-        </ion-content>
-      </ng-template>
-    </ion-popover>
-  </div>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <div class="div1">
+          <ion-button id="hover-trigger" class="fecha" expand="block"  size="Default">Fecha</ion-button>
+          <ion-popover trigger="hover-trigger" triggerAction="hover" alignment="center" size="auto">
+            <ng-template>
+              <ion-content>
+                <ion-datetime presentation="date" [(ngModel)]="indicador.fecha" ></ion-datetime>
+              </ion-content>
+            </ng-template>
+          </ion-popover>
+        </div>
+      </ion-col>
+
+      <ion-col>
+          <ion-select [(ngModel)]="indicador.variedad" aria-label="Variedad" interface="popover" fill="outline" id="select" placeholder="Variedad">
+            <ion-select-option value="XLENCE">XLENCE</ion-select-option>
+            <ion-select-option value="CLOUD">CLOUD</ion-select-option>
+          </ion-select>
+      </ion-col>
+      <ion-col>
+        <ion-button expand="block" color="success" (click)="buscar()">Buscar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+<!--  <div class="div1">-->
+<!--    <ion-button id="hover-trigger" class="fecha">Fecha</ion-button>-->
+<!--    <ion-popover trigger="hover-trigger" triggerAction="hover" [dismissOnSelect]="true">-->
+<!--      <ng-template>-->
+<!--        <ion-content>-->
+<!--          <ion-datetime presentation="date" ></ion-datetime>-->
+<!--        </ion-content>-->
+<!--      </ng-template>-->
+<!--    </ion-popover>-->
+<!--  </div>-->
+
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="3">
+        <div class="table-container-2">
+          <div class="balanza2VSbalanza3">
+            <table class="tableB2B3" ID="TablaPRE">
+              <caption><strong>PRECLASIFICACION</strong></caption>
+              <tr>
+                <th>Grados</th>
+                <th class="fecha-tittle">{{fecha}}</th>
+
+              </tr>
+              <tr *ngFor="let item of gradosName; let i=index">
+                <td >{{item}}</td>
+                <td>{{columna1[i]}}</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+
+
+      </ion-col>
+      <ion-col size="12" size-sm="3">
+
+        <div class="table-container-2">
+          <div class="balanza2VSbalanza3">
+            <table class="tableB2B3" >
+              <caption><strong>APERTURA</strong></caption>
+              <tr>
+                <th>Grados</th>
+                <th class="fecha-tittle">{{fecha}}</th>
+              </tr>
+              <tr *ngFor="let item of gradosApertura; let i=index">
+                <td >{{item}}</td>
+                <td>{{Acolumna1[i]}}</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+      </ion-col>
+      <ion-col size="12" size-sm="3">
+
+        <div class="table-container-2">
+          <div class="balanza2VSbalanza3">
+            <table class="tableB2B3" >
+              <caption><strong>CLOUD</strong></caption>
+              <tr>
+                <th>Grados</th>
+                <th class="fecha-tittle">{{fecha}}</th>
+
+              </tr>
+              <tr *ngFor="let item of gradosCloud; let i=index">
+                <td >{{item}}</td>
+                <td>{{Ccolumna1[i]}}</td>
+
+              </tr>
+            </table>
+          </div>
+        </div>
+
+      </ion-col>
+      <ion-col size="12" size-sm="3">
+
+        <div class="table-container-2">
+          <div class="balanza2VSbalanza3">
+            <table class="tableB2B3"  id="TablaGV">
+              <caption><strong>GV</strong></caption>
+              <tr>
+                <th>Grados</th>
+                <th class="fecha-tittle">{{fecha}}</th>
+
+              </tr>
+              <tr *ngFor="let item of gradosName; let i=index">
+                <td >{{item}}</td>
+                <td>{{GVcolumna1[i]}}</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+<!--  <div class="table-container-2">-->
+<!--    <div class="balanza2VSbalanza3">-->
+<!--      <table class="tableB2B3" >-->
+<!--        <caption><strong>PRECLASIFICACION</strong></caption>-->
+<!--        <tr>-->
+<!--          <th>Grados</th>-->
+<!--          <th class="fecha-tittle">hola</th>-->
+
+<!--        </tr>-->
+<!--        <tr *ngFor="let item of gradosName; let i=index">-->
+<!--          <td >{{item}}</td>-->
+<!--          <td>1</td>-->
+<!--        </tr>-->
+<!--      </table>-->
+<!--    </div>-->
+
+<!--  </div>-->
+
 
 </ion-content>
